DO180-apps/RTP4-2-ROKS/essentials-installations/ingress-controller-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ingress-controller-route
  namespace: kube-system
spec:
  host: devcluster-9fb7e40700ceec3a76e70fdb30f06230-0000.eu-de.containers.appdomain.cloud
  to:
    kind: Service
    name: nginx-controller-nginx-ingress-controller
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
